librbd: delete ExclusiveLock instance when switching to snapshot

Fixes: http://tracker.ceph.com/issues/16446
Signed-off-by: Jason Dillaman <dillaman@redhat.com>